--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.2",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
