--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.483.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
